static/css/custom.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');


body {
  font-family: 'Overpass', sans-serif;;
  font-weight: 400;
  color: #333;
  line-height: 1.8em;
  font-size: 20px;
}


.highlight pre {
  background-color: #282c34 !important;
}

.highlight pre code {
  font-size: large;
  line-height: 22px;
  font-family: 'Inconsolata', monospace;
}

pre {
  border-radius: 0.25rem;
}
 
a {
  color: #007aff;
}
a:hover {
  border-bottom: 2px solid #007aff;
}

.post .tags a {
    border: 1px solid #007aff;
    color: #007aff;
}

.post .series a {
  display: inline-block;
  border: 1px solid #ff9f10;
  border-radius: 3px;
  padding: 0px 6px;
  color: #ff9f10;
  line-height: 20px;
  font-size: 0.85em;
  text-decoration: none;
  margin: 0 10px 0 0;
}

::-moz-selection {
    background: #007aff;
    color: #fff;
}

::selection {
    background: #007aff;
    color: #fff;
}

.gist .gist-file table tbody tr {
  background-color: #fff;
}

.gist .gist-file table th, table td {
	border-bottom: none;
}


.markdown p code {
  color: #f14668;
	padding: 0.25rem;
	background: #e9ecef;
	border-radius: .25rem;
  font-size: .775em;
  font-family: 'Inconsolata', monospace;
}

.highlight {
  background-color: aqua;
}

ul.flat li {
  display: inline-block;
  list-style: none;
  margin-left: 0;
}

h1,h2,h3,h4,h5,h6 {
  font-family: 'Roboto', sans-serif;
}

.post-header .meta .date .day {
  color: #4a4a4a;
  font-family: 'Roboto', sans-serif;
}

.hero-big {
  display: flex;
  flex-direction: row;
  max-block-size: 25rem;
  gap: 25px;

}

.container {
  max-width: 1000px;
}

@media (max-width:450px) {
  .hero-big{
    flex-direction: column;
    gap: 10px;
  }

}

div > div .hero-big > .day {
 font-weight: bold;
}

div.hero-big div span.day{
  color: #4a4a4a;
  font-size: smaller;
}

